--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Vite + Preact</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <div id="Main"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
