update meta tags for secure https.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="og:image:secure" content="https://d2yoaaok6mt608.cloudfront.net/Scherm%C3%82%C2%ADafbeelding%202024-01-30%20om%2016.41.32.png"/>
-    <meta name="og:title" content="Studio Grafisch Ontwerp"/>
-    <meta name="og:description" content="Studio Grafisch Ontwerp offers a program for recently graduated graphic designers from LUCA School of Arts and KASK & Conservatorium/HOGENT and Howest in which the identity of Design Museum Gent is reviewed. During the renovation and expansion of Design Museum Gent, Studio Grafisch Ontwerp explores the identities a museum can adopt today. Experimentation, self-initiated projects and internal assignments are central with the aim of exploring different (graphic) identities. Members alternate on a regular basis. 019 and Design Museum Gent provide a professional framework throughout the process. "/>
+    <meta property="og:image" content="https://d2yoaaok6mt608.cloudfront.net/Scherm%C3%82%C2%ADafbeelding%202024-01-30%20om%2016.41.32.png"/>
+    <meta property="og:image:secure" content="https://d2yoaaok6mt608.cloudfront.net/Scherm%C3%82%C2%ADafbeelding%202024-01-30%20om%2016.41.32.png"/>
+    <meta property="og:title" content="Studio Grafisch Ontwerp"/>
+    <meta property="og:description" content="Studio Grafisch Ontwerp offers a program for recently graduated graphic designers from LUCA School of Arts and KASK & Conservatorium/HOGENT and Howest in which the identity of Design Museum Gent is reviewed. During the renovation and expansion of Design Museum Gent, Studio Grafisch Ontwerp explores the identities a museum can adopt today. Experimentation, self-initiated projects and internal assignments are central with the aim of exploring different (graphic) identities. Members alternate on a regular basis. 019 and Design Museum Gent provide a professional framework throughout the process. "/>
     <title>Studio Grafisch Ontwerp</title>
   </head>
   <body>
